prepare to publish